--- a/local.settings.json
+++ b/local.settings.json
@@ -2,6 +2,7 @@
     "IsEncrypted": false,
     "Values": {
       "FUNCTIONS_WORKER_RUNTIME": "custom",
-      "AzureWebJobsStorage": ""
+      "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+      "STORAGE_CONNECTION": "UseDevelopmentStorage=true"
     }
   }
