--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
     "dev": "func start"
   },
   "dependencies": {
-    "bun": "^1.0.29",
-    "hono": "^4.0.7"
+    "bun": "latest"
   },
   "devDependencies": {
-    "@types/bun": "^1.0.7"
+    "@types/bun": "latest"
   }
 }
