--- a/bun-serve/package.json
+++ b/bun-serve/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "azure-functions-with-bun",
+  "module": "index.ts",
+  "type": "module",
   "scripts": {
     "dev": "func start"
   },
@@ -7,5 +10,8 @@
   },
   "devDependencies": {
     "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.6.3"
   }
 }
