--- a/elysia/package.json
+++ b/elysia/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "func start",
+    "schema:check": "bun run ./schema-check.ts",
     "build": "bun build ./index.ts --compile --outfile app",
     "deploy": "rm -rf out && mkdir out && cp -r name-check app out && cp host.prod.json out/host.json && pushd out && func azure functionapp publish func-dev-func-neil --custom && popd"
   },
