--- a/bun-serve/package.json
+++ b/bun-serve/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "dev": "func start",
     "build": "bun build ./index.ts --compile --outfile app",
-    "deploy": "rm -rf out && mkdir out && cp -r name-check app out && cp host.prod.json out/host.json && pushd out && func azure functionapp publish func-dev-func-neil --custom && popd"
+    "deploy": "rm -rf out && mkdir out && cp -r name-check receive-order app out && cp host.prod.json out/host.json && pushd out && func azure functionapp publish func-dev-func-neil --custom && popd"
   },
   "dependencies": {
-    "bun": "latest"
+    "@sinclair/typebox": "^0.34.13",
+    "bun": "latest",
+    "ts-results-es": "^4.2.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
